<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Around Me</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Splash Screen Activity -->
    <string name="cmpe_277">CMPE 277 SEC-01</string>
    <string name="assignment_3">Android Individual APP</string>
    <string name="title">Around ME!</string>

    <!-- AroundMe Home Activity -->
    <string name="categories">Categories</string>
    <string name="categories_on_map">Categories on Map</string>

    <!-- Weather Activity -->
    <string name="weather_title">Weather at </string>
    <string name="weather_main">Weather:</string>
    <string name="weather_desc">Description:</string>
    <string name="temperature">Temperature:</string>
    <string name="min_tem">Min. Temperature:</string>
    <string name="max_tem">Max. Temperature:</string>
    <string name="humidity">Humidity:</string>

    <!-- Events List -->
    <string name="events_list">Events on List</string>
    <string name="events_map">Events on Map</string>
    <string name="range">Range</string>
    <string name="select_range">Select Range</string>
    <string name="range_settings">Range Settings</string>
    <string name="category">Category</string>

    <!-- Event Details Activity -->
    <string name="detail">Details</string>
    <string name="name">Name:</string>
    <string name="rating">Rating:</string>
    <string name="status">Status:</string>
    <string name="show_on_map">Take me there!</string>
    <string name="address">Address:</string>

    <!-- Shake Functionality -->
    <string name="select_where">Where Am I ?</string>

    <!-- Favorite Activity -->
    <string name="favorite">Favorite Events</string>

</resources>