<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDC999"
    tools:context=".EventsActivity" >

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="50dip"
        android:layout_height="50dip"
        android:layout_alignParentRight="true"
        android:layout_margin="20dip"
        android:src="@drawable/favorite"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/favorite"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="25dip"
        android:background="@drawable/rounded_corner"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/desc_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/name"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:id="@+id/family_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_dark_color" />

        <RelativeLayout
            android:id="@+id/family_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/address"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:id="@+id/address_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_dark_color" />

        <RelativeLayout
            android:id="@+id/rating_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/rating"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/rating_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/rating"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:id="@+id/rating_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_dark_color" />

        <RelativeLayout
            android:id="@+id/status_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_margin="5dip"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/status"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_margin="5dip"
                android:layout_toRightOf="@+id/status"
                android:gravity="right"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:id="@+id/rating_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_dark_color" />

        <RelativeLayout
            android:id="@+id/location_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dip" >

            <Button
                android:id="@+id/show_map"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="3dip"
                android:background="#9BD1E5"
                android:padding="5dip"
                android:text="@string/show_on_map"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/show_map"
                android:layout_centerHorizontal="true"
                android:layout_margin="3dip"
                android:background="#9BD1E5"
                android:padding="5dip"
                android:text="Add to Favorite"
                android:textColor="@color/black" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>